--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "filtersjs",
+  "name": "@hatchun/filtersjs",
   "version": "1.0.5",
   "description": "Simple faceted search solution for small JSON datasets.",
   "repository": "git@github.com:ognus/filtersjs.git",
