--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hatchun/filtersjs",
   "version": "1.0.5",
   "description": "Simple faceted search solution for small JSON datasets.",
-  "repository": "git@github.com:ognus/filtersjs.git",
+  "repository": "git@github.com:hatchun/filtersjs.git",
   "author": "Tomek Kolasa <kolasa.tomek@gmail.com>",
   "license": "MIT",
   "main": "dist/index.js",
